Closed Bug 1833079 Opened 2 years ago Closed 2 years ago

[CTW] Firefox no longer marks required inputs of a non-simple type that become valid as such for assistive technologies, and doesn't properly update the cache accordingly.

Categories

(Core :: Disability Access APIs, defect, P1)

x86_64
Windows 11
defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- wontfix
firefox114 --- fixed
firefox115 --- fixed

People

(Reporter: MarcoZ, Assigned: Jamie)

References

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce, with the NVDA screen reader:

  1. Open data:text/html,<label for="email">Enter your email address:"</label><input id="email" type="email" required />
  2. Focus the input.
    • NVDA will announce that the field is required and currently invalid.
  3. Type a valid email address.
  4. Press NVDAKey+Tab to repeat the focused element.
    • Expected: The field should read required, but the invalid state should no longer be announced.
    • Actual: The field is still being announced as invalid.
  5. Press Escape to enter browse mode, then press NVDAKey+F5 to refresh the buffer.
  6. Press CTRL+Home, then f to move to the form field.
    • Expected: Now, the field should be announced as required, but the invalid state should not be announced.
    • Actual: Even after a refresh, the field is still being announced as invalid.
  7. Change the URL in the address bar so that the required field is removed, and repeat steps 3 through 6.
    • After step 4, the field is still being announced as invalid, so the event that tells the browser the field is now valid, is not being fired.
    • After step 6, the field is now correctly being announced as no longer being invalid.

In short, if there are two validations, through the input type and the required attribut, neither an event is fired to tell assistive technologies that the invalid state has gone away, nor the required condition has been met. Alternatively, the invalid state is being flipped twice accidentally.
If there is only one condition, like the email type being satisfied with a valid email address, or a simple text input that is required, having contents, the event is still not fired, but the cache is properly updated.

For me, the invalid state never seems to be cleared from the cache once set, even for something as simple as <input type="email">.

Severity: -- → S3
Priority: -- → P1

It did get cleared for me for email earlier, and also for simple, merely required, inputs. But only after refreshing the buffer, never through an event.

Assignee: nobody → jteh
Blocks: 1733188
No longer blocks: a11y-ctw

Previously, we passed true for aIsEnabled, indicating that the state was only ever enabled, never disabled.
We could get the actual enabled value here using dom::ElementState::HasState(), but that wouldn't take aria-invalid into account if present.
Instead, we let AccStateChangeEvent calculate it by calling Accessible::State().

Whiteboard: [ctw-postship]
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f0258342b9c1 When notified about a dom::ElementState::INVALID change, let AccStateChangeEvent calculate whether the state is enabled. r=morgan
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

The patch landed in nightly and beta is affected.
:Jamie, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox114 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(jteh)

Urgh. I somehow forgot to request an uplift on this. I'm guessing it's too late to do that now given we're going to rc. :(

Flags: needinfo?(jteh)

(In reply to James Teh [:Jamie] from comment #7)

Urgh. I somehow forgot to request an uplift on this. I'm guessing it's too late to do that now given we're going to rc. :(

If it's very low risk, I can still take it before the merge on Monday, please request it today though, thanks :)

Flags: needinfo?(jteh)

Comment on attachment 9333615 [details]
Bug 1833079: When notified about a dom::ElementState::INVALID change, let AccStateChangeEvent calculate whether the state is enabled.

Beta/Release Uplift Approval Request

  • User impact if declined: Users will continue to receive inaccurate information about the validity of inputs
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): We typically use State() for this kind of information anyway, so this patch aligns AccStateChangeEvent's behaviour with behaviour throughout the codebase. Also, this change is scoped to invalid state only, the surface area is narrow and users are already receiving incorrect info so the potential for regression is also low.
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9333615 - Flags: approval-mozilla-beta?

Comment on attachment 9333615 [details]
Bug 1833079: When notified about a dom::ElementState::INVALID change, let AccStateChangeEvent calculate whether the state is enabled.

Approved to land on the beta branch before Monday merge to mozilla-release for our RC build, thanks.

Attachment #9333615 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: needinfo?(jteh)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: